--- a/wordpress/wp-content/themes/refinery/css/style.css
+++ b/wordpress/wp-content/themes/refinery/css/style.css
@@ -9,6 +9,37 @@
                 font-style: normal;
         }
 
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+      -ms-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+ 
+.pic {
+  border: 10px solid #fff;  
+  float: left;
+  width: 100%;
+  margin: 15px 0px 10px 0px;
+  overflow: hidden;
+  background: white;
+  -webkit-box-shadow: 5px 5px 5px #111;
+          box-shadow: 5px 5px 5px #111;  
+}
+
+/*TILT*/
+.tilt {
+  -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+       -o-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+}
+ 
+.tilt:hover {
+   transform:scale(1.1,1.1);
+}
 
 body {
         background:#000;
@@ -258,13 +289,10 @@ body {
 }
 
 #page_title {
-    font-family: 'FuturastdBold';
-    font-weight:normal;
+    font-weight:bolder;
     font-size:14px;
     text-transform:uppercase;
     position: absolute;
-    top:136px;
-    left:24px;
     text-align:center;
     width:100%;
 }
@@ -394,7 +422,7 @@ body {
 #green_box {
     
     background:rgba(84, 97, 84, 0.8);
-    width:600px;
+    width:617px;
     
     height:100%;
 
@@ -475,7 +503,6 @@ body {
 }
 
 .content_placeholder {
-    padding-right:30px;
     padding-top:20px;
 }
 
@@ -539,7 +566,6 @@ body {
 /* MENU STYLE*/
 
 .menu_content {
-    width:565px;
      font-size:11px;
     color:#fff;
     padding-top:29px;
@@ -580,7 +606,25 @@ body {
     text-transform: none;
 }
 
+.menu_content .one_column .menu-list {
+	list-style: none;
+}
+
+.menu_content .one_column .menu-list li {
+	display: inline-block;
+	float: none;
+	width: 28.00%;
+	margin: 0 2%;
+	vertical-align: top;
+	text-align: center;
+}
+
+.menu_content .one_column .menu-list li a img {
+	width: 100%;
+}
+
 .two_columns,.one_column {
+	margin-top:20px;
     margin-bottom:20px;
 }
 
@@ -771,6 +815,7 @@ span.price {
     color:#fff;
 }
 
+
 #flower {
     width:55px;
     height: 82px;
@@ -808,8 +853,14 @@ span.price {
 
 #contact_p p {
     font-size:12px;
+    line-height: 2;
+    font-family: "Gill Sans", Helvetica, Arial, sans-serif;
+    margin-bottom: 15px;
 }
 
+#contact_p a {
+	color: #fff;
+}
 #photo_caption {
     height: 82px;
     position: absolute;
